# pokemon-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
bot/: bot.py  db.py  settings.py
bot/commands/: agent.py  open_pack.py  show_cards.py  trade_card.py
bot/utils/: logging_utils.py  rate_limit.py
bot/views/: deck_view.py  pack_view.py
deploy/: deployment.yaml
docker/bot/: Dockerfile
docker/bot-base/: Dockerfile
docker/bot-base/scripts/: fetch_cards.py
docker/card-db-init/: Dockerfile
docker/card-db-init/scripts/: changelog.sql
tools/: build-images.sh  lock-deps.sh
